syntax = "proto3";

import "google/protobuf/descriptor.proto";

package auth.v1;

extend google.protobuf.MethodOptions {
  optional bool auth_enabled = 50000;
}