syntax = "proto3";

package user.v1;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {} 
}

message GetUserRequest {
}

message GetUserResponse {
  User user = 1;
}

message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string photo_url = 4;
}